--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -12,7 +12,7 @@ After trust establishment, tbDEX’s standard messaging protocol enables [Partic
 
 Once transaction details are confirmed, participants execute and settle these transactions outside of the protocol with PFIs directly.
 
-tbDEX is architected on Web5 infrastructure, utilizing decentralized technologies such as [Decentralized Identifiers](/docs/web5/learn/decentralized-identifiers) (DIDs) and [Verifiable Credentials](/docs/web5/learn/verifiable-credentials) (VCs).
+tbDEX is architected on Web5 infrastructure, utilizing decentralized technologies such as [Decentralized Identifiers (DIDs)](/docs/web5/learn/decentralized-identifiers) and [Verifiable Credentials (VCs)](/docs/web5/learn/verifiable-credentials).
 
 ## Why do we need tbDEX?
 
