--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -1,41 +1,78 @@
 ---
-sidebar_position: 3
+sidebar_position: 2
 ---
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import CodeBlock from '@theme/CodeBlock';
 
 # Required SDKs
 
 To implement and operate as a PFI, you’ll need to use the following SDKs:
 
+<Tabs groupId="language">
 
-* [**web5/dids**](https://www.npmjs.com/package/@web5/dids) - To work with [Decentralized Identifiers (DID)](/docs/web5/learn/decentralized-identifiers), including creating an identity, and performing any other required cryptographic functions, you’ll need this package.
-* [**web5/credentials**](https://www.npmjs.com/package/@web5/credentials) - Enable verification of your customer information, including information such as customer’s identity or whether a customer is on a sanctions list. Verifiable Credentials provide a decentralized and trustworthy way of verifying a customer.
-* [**tbdex/server**](https://www.npmjs.com/package/@tbdex/http-server) - Enable convenience methods for setting up routing and networking to facilitate your PFI.
+  <TabItem value="JavaScript" label="JavaScript" default>
+    <ul>
+      <li><a href="https://www.npmjs.com/package/@web5/dids"><strong>web5/dids</strong></a> - To work with Decentralized Identifiers (DID), including creating an identity, and performing any other required cryptographic functions, you’ll need this package.</li>
+      <li><a href="https://www.npmjs.com/package/@web5/credentials"><strong>web5/credentials</strong></a> - Enable verification of your customer information, including information such as customer’s identity or whether a customer is on a sanctions list. Verifiable Credentials provide a decentralized and trustworthy way of verifying a customer.</li>
+      <li><a href="https://www.npmjs.com/package/@tbdex/http-server"><strong>tbdex/server</strong></a> - Enable convenience methods for setting up routing and networking to facilitate your PFI.</li>
+    </ul>
+  </TabItem>
+
+  <TabItem value="Kotlin" label="Kotlin">
+    <ul>
+      <li><a href="https://github.com/TBD54566975/web5-kt/blob/main/dids"><strong>web5/dids</strong></a> - To work with Decentralized Identifiers (DID), including creating an identity, and performing any other required cryptographic functions, you’ll need this package.</li>
+      <li><a href="https://github.com/TBD54566975/web5-kt/blob/main/credentials"><strong>web5/credentials</strong></a> - Enable verification of your customer information, including information such as customer’s identity or whether a customer is on a sanctions list. Verifiable Credentials provide a decentralized and trustworthy way of verifying a customer.</li>
+      <li><a href="https://github.com/TBD54566975/tbdex-kt/tree/main/httpserver"><strong>tbdex/server</strong></a> - Enable convenience methods for setting up routing and networking to facilitate your PFI.</li>
+    </ul>
+  </TabItem>
+
+</Tabs>
+
+
+
+
 
 ## Install SDKs
-To install `@web5/dids`:
 
-```bash
-npm i @web5/dids
-```
-
-To install `@web5/credentials`:
-
-```bash
+<Tabs groupId="language">
+    <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
+    <p>To install `@web5/dids`:</p>
+    <CodeBlock language="bash">
+{`npm i @web5/dids
 npm i @web5/credentials
-```
-
-To install `@tbdex/http-server`:
-
-```bash
 npm i @tbdex/http-server
-```
+`}
+    </CodeBlock>
+    </TabItem>
+    <TabItem value="Kotlin" label="Kotlin">
+    You can install the repositories using Gradle or Maven using the following additions to your `build.gradle.kts`:
+    <CodeBlock language="js">
+{`repositories {
+    mavenCentral()
+    maven("https://jitpack.io")
+    maven("https://repo.danubetech.com/repository/maven-public/")
+    maven("https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/")
+}
+dependencies {
+    implementation("xyz.block:web5-credentials:0.0.9-delta")
+    implementation("xyz.block:web5-dids:0.0.9-delta")
+    implementation("com.github.TBD54566975:tbdex-kt:0.4.0-beta")
+}
+`}
+    </CodeBlock>
+    </TabItem>
+</Tabs>
 
 ## Import Classes
 
 To send and receive tbDEX messages, import the following classes:
 
-```js
-import { 
+<Tabs groupId="language">
+    <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
+    <CodeBlock language="js">
+{`import { 
     TbdexHttpServer, 
     Rfq, 
     Quote, 
@@ -45,4 +82,15 @@ import {
     CallbackError, 
     ErrorDetail 
 } from '@tbdex/http-server'
-```
+`}
+    </CodeBlock>
+    </TabItem>
+    <TabItem groupId="language" value="Kotlin" label="Kotlin" default>
+    <CodeBlock language="kotlin">
+{`import web5.sdk.credentials
+import web5.sdk.dids
+import tbdex.sdk.httpserver
+`}
+    </CodeBlock>
+    </TabItem>
+</Tabs>
