--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -90,6 +90,7 @@ To send and receive tbDEX messages, import the following classes:
 {`import web5.sdk.credentials
 import web5.sdk.dids
 import tbdex.sdk.httpserver
+import tbdex.sdk.protocol
 `}
     </CodeBlock>
     </TabItem>
