--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -10,55 +10,45 @@ import CodeBlock from '@theme/CodeBlock';
 
 To implement and operate as a PFI, you’ll need to use the following SDKs:
 
-<Tabs groupId="language">
+* **web5/dids** - To work with Decentralized Identifiers (DID), including creating an identity, and performing any other required cryptographic functions, you’ll need this package.
 
-  <TabItem value="JavaScript" label="JavaScript" default>
-    <ul>
-      <li><a href="https://www.npmjs.com/package/@web5/dids"><strong>web5/dids</strong></a> - To work with Decentralized Identifiers (DID), including creating an identity, and performing any other required cryptographic functions, you’ll need this package.</li>
-      <li><a href="https://www.npmjs.com/package/@web5/credentials"><strong>web5/credentials</strong></a> - Enable verification of your customer information, including information such as customer’s identity or whether a customer is on a sanctions list. Verifiable Credentials provide a decentralized and trustworthy way of verifying a customer.</li>
-      <li><a href="https://www.npmjs.com/package/@tbdex/http-server"><strong>tbdex/server</strong></a> - Enable convenience methods for setting up routing and networking to facilitate your PFI.</li>
-    </ul>
-  </TabItem>
+* **web5/credentials** - Enable verification of your customer information, including information such as customer’s identity or whether a customer is on a sanctions list. Verifiable Credentials provide a decentralized and trustworthy way of verifying a customer.
 
-  <TabItem value="Kotlin" label="Kotlin">
-    <ul>
-      <li><a href="https://github.com/TBD54566975/web5-kt/blob/main/dids"><strong>web5/dids</strong></a> - To work with Decentralized Identifiers (DID), including creating an identity, and performing any other required cryptographic functions, you’ll need this package.</li>
-      <li><a href="https://github.com/TBD54566975/web5-kt/blob/main/credentials"><strong>web5/credentials</strong></a> - Enable verification of your customer information, including information such as customer’s identity or whether a customer is on a sanctions list. Verifiable Credentials provide a decentralized and trustworthy way of verifying a customer.</li>
-      <li><a href="https://github.com/TBD54566975/tbdex-kt/tree/main/httpserver"><strong>tbdex/server</strong></a> - Enable convenience methods for setting up routing and networking to facilitate your PFI.</li>
-    </ul>
-  </TabItem>
-
-</Tabs>
+* **tbdex/server** - Enable convenience methods for setting up routing and networking to facilitate your PFI.
 
 ## Install SDKs
 
 <Tabs groupId="language">
-    <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
-    <p>To install `@web5/dids`:</p>
-    <CodeBlock language="bash">
-{`npm i @web5/dids
-npm i @web5/credentials
-npm i @tbdex/http-server
-`}
-    </CodeBlock>
-    </TabItem>
-    <TabItem value="Kotlin" label="Kotlin">
-    You can install the repositories using Gradle or Maven using the following additions to your <code>build.gradle.kts</code>:
-    <CodeBlock language="js">
-{`repositories {
+  <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
+  
+  To install packages:
+
+  ```bash
+  npm i @web5/dids
+  npm i @web5/credentials
+  npm i @tbdex/http-server
+  ```
+
+  </TabItem>
+  <TabItem groupId="language" value="Kotlin" label="Kotlin">
+
+  You can install the repositories using Gradle or Maven using the following additions to your <code>build.gradle.kts</code>:
+
+  ```js
+  repositories {
     mavenCentral()
     maven("https://jitpack.io")
     maven("https://repo.danubetech.com/repository/maven-public/")
     maven("https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/")
-}
-dependencies {
+  }
+  dependencies {
     implementation("xyz.block:web5-credentials:0.0.9-delta")
     implementation("xyz.block:web5-dids:0.0.9-delta")
     implementation("com.github.TBD54566975:tbdex-kt:0.4.0-beta")
-}
-`}
-    </CodeBlock>
-    </TabItem>
+  }
+  ```
+  
+  </TabItem>
 </Tabs>
 
 ## Import Classes
@@ -66,26 +56,28 @@ dependencies {
 To send and receive tbDEX messages, import the following classes:
 
 <Tabs groupId="language">
-    <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
-    <CodeBlock language="js">
-{`import { 
-    TbdexHttpServer, 
-    Rfq, 
-    Quote, 
-    Order, 
-    OrderStatus, 
-    Close, 
-    CallbackError, 
-    ErrorDetail 
-} from '@tbdex/http-server'
-`}
-    </CodeBlock>
-    </TabItem>
-    <TabItem groupId="language" value="Kotlin" label="Kotlin" default>
-    <CodeBlock language="kotlin">
-{`import tbdex.sdk.httpserver
-import tbdex.sdk.protocol
-`}
-    </CodeBlock>
-    </TabItem>
+  <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
+
+  ```js
+  import { 
+      TbdexHttpServer, 
+      Rfq, 
+      Quote, 
+      Order, 
+      OrderStatus, 
+      Close, 
+      CallbackError, 
+      ErrorDetail 
+  } from '@tbdex/http-server'
+  ```
+
+  </TabItem>
+  <TabItem groupId="language" value="Kotlin" label="Kotlin" default>
+
+  ```kt
+  import tbdex.sdk.httpserver
+  import tbdex.sdk.protocol
+  ```
+
+  </TabItem>
 </Tabs>
