Adding the proper import statements

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -75,8 +75,12 @@ To send and receive tbDEX messages, import the following classes:
   <TabItem groupId="language" value="Kotlin" label="Kotlin" default>
 
   ```kt
-  import tbdex.sdk.httpserver
-  import tbdex.sdk.protocol
+  import tbdex.sdk.httpserver.TbdexHttpServer
+  import tbdex.sdk.protocol.models.Rfq
+  import tbdex.sdk.protocol.models.Quote
+  import tbdex.sdk.protocol.models.Order
+  import tbdex.sdk.protocol.models.OrderStatus
+  import tbdex.sdk.protocol.models.Close
   ```
 
   </TabItem>
