--- a/site/docs/shnip-demo.mdx
+++ b/site/docs/shnip-demo.mdx
@@ -5,7 +5,10 @@ hide_title: true
 
 import createDidDht from '!!raw-loader!@site/snippets/web5/build/decentralized-identifiers/createDidDht.snippet.js';
 
-<LanguageSwitchHeader text="Hello World" />
+<LanguageSwitcher />
+
+# Hello World
+
 <LanguageSupport languages="JavaScript, Kotlin" />
 
 Depending on the language you're programming in, you'll want to <LanguageSwitchLink text='link to different content' links='{"Kotlin": "https://kotlinlang.org/", "JavaScript": "https://www.javascript.com/"}'/>. Sometimes, you'll use the exact same link [for both languages](https://www.google.com/);
