second file to test global lang switch

--- a/site/docs/shnip-demo2.mdx
+++ b/site/docs/shnip-demo2.mdx
@@ -6,7 +6,7 @@ import createDidDht from '!!raw-loader!@site/snippets/web5/build/decentralized-i
 
 <LanguageSwitcher />
 
-# Hello World
+# Test Global Changes
 
 <LanguageSupport languages="JavaScript, Kotlin" />
 
