moved LanguageSupport to LanguageSwitcher

--- a/site/docs/shnip-demo.mdx
+++ b/site/docs/shnip-demo.mdx
@@ -2,11 +2,9 @@
 hide_title: true
 ---
 
-<LanguageSwitcher />
+<LanguageSwitcher languages="JavaScript, Kotlin"/>
 
 # Hello World
-
-<LanguageSupport languages="JavaScript, Kotlin" />
 
 Depending on the language you're programming in, you'll want to <LanguageSwitchLink text='link to different content' links='{"Kotlin": "https://kotlinlang.org/", "JavaScript": "https://www.javascript.com/"}'/>. Sometimes, you'll use the exact same link [for both languages](https://www.google.com/);
 
