--- a/site/docs/shnip-demo2.mdx
+++ b/site/docs/shnip-demo2.mdx
@@ -1,12 +1,10 @@
 ---
 hide_title: true
 ---
+<LanguageSwitcher languages="JavaScript, Kotlin"/>
 
-<LanguageSwitcher />
 
 # Test Global Changes
-
-<LanguageSupport languages="JavaScript, Kotlin" />
 
 Depending on the language you're programming in, you'll want to <LanguageSwitchLink text='link to different content' links='{"Kotlin": "https://kotlinlang.org/", "JavaScript": "https://www.javascript.com/"}'/>. Sometimes, you'll use the exact same link [for both languages](https://www.google.com/);
 
@@ -22,3 +20,4 @@ Depending on the language you're programming in, you'll want to <LanguageSwitchL
     },
   ]}
 />
+
