global sync of language switch

--- a/site/docs/shnip-demo.mdx
+++ b/site/docs/shnip-demo.mdx
@@ -9,7 +9,7 @@ hide_title: true
 Depending on the language you're programming in, you'll want to <LanguageSwitchLink text='link to different content' links='{"Kotlin": "https://kotlinlang.org/", "JavaScript": "https://www.javascript.com/"}'/>. Sometimes, you'll use the exact same link [for both languages](https://www.google.com/);
 
 <Shnip
-  snippets={[{ name: 'createDidDht', language: 'JavaScript' }]}
+  snippets={[{ name: 'assignVcJwt', language: 'JavaScript' }]}
   // 'inlineSnippets' is how we'll hardcode
   inlineSnippets={[
     {
@@ -20,3 +20,4 @@ Depending on the language you're programming in, you'll want to <LanguageSwitchL
     },
   ]}
 />
+
