--- a/site/docs/shnip-demo2.mdx
+++ b/site/docs/shnip-demo2.mdx
@@ -1,6 +1,7 @@
 ---
 hide_title: true
 ---
+
 <LanguageSwitcher languages="JavaScript, Kotlin"/>
 
 
@@ -9,7 +10,22 @@ hide_title: true
 Depending on the language you're programming in, you'll want to <LanguageSwitchLink text='link to different content' links='{"Kotlin": "https://kotlinlang.org/", "JavaScript": "https://www.javascript.com/"}'/>. Sometimes, you'll use the exact same link [for both languages](https://www.google.com/);
 
 <Shnip
-  snippets={[{ name: 'createDidDht', language: 'JavaScript' }]}
+  snippets={[{ name: 'assignVcJwt', language: 'JavaScript' }]}
+  // 'inlineSnippets' is how we'll hardcode
+  inlineSnippets={[
+    {
+      code: `
+            val signedVcJwt = "eyJ0eXAiOiJKV1QiLCJhbGciOiJFZERTQSIsImtp..."
+      `,
+      language: 'Kotlin',
+    },
+  ]}
+/>
+
+# Adding a second one
+
+<Shnip
+  snippets={[{ name: 'assignVcJwt', language: 'JavaScript' }]}
   // 'inlineSnippets' is how we'll hardcode
   inlineSnippets={[
     {
