matching JS snippet

--- a/site/docs/shnip-demo2.mdx
+++ b/site/docs/shnip-demo2.mdx
@@ -25,7 +25,7 @@ Depending on the language you're programming in, you'll want to <LanguageSwitchL
 # Adding a second one
 
 <Shnip
-  snippets={[{ name: 'assignVcJwt', language: 'JavaScript' }]}
+  snippets={[{ name: 'createEmploymentCredential', language: 'JavaScript' }]}
   // 'inlineSnippets' is how we'll hardcode
   inlineSnippets={[
     {
