--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -2,6 +2,9 @@
 sidebar_position: 2
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 # Required SDKs
 
 To implement and operate as a Wallet on a tbDEX network, you’ll need to use the following SDKs:
@@ -14,27 +17,71 @@ To implement and operate as a Wallet on a tbDEX network, you’ll need to use th
 ## Install SDKs
 To install `@web5/dids`:
 
-```bash
-npm i @web5/dids
-```
+<Tabs groupId="language">
+  <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
+  
+  To install packages:
 
-To install `@web5/credentials`:
+  ```bash
+  npm i @web5/dids
+  npm i @web5/credentials
+  npm i @tbdex/http-client
+  ```
 
-```bash
-npm i @web5/credentials
-```
+  </TabItem>
+  <TabItem groupId="language" value="Kotlin" label="Kotlin">
 
-To install `@tbdex/http-client`:
+  You can install the repositories using Gradle or Maven using the following additions to your <code>build.gradle.kts</code>:
 
-```bash
-npm i @tbdex/http-client
-```
+  ```js
+  repositories {
+    mavenCentral()
+    maven("https://jitpack.io")
+    maven("https://repo.danubetech.com/repository/maven-public/")
+    maven("https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/")
+  }
+  dependencies {
+    implementation("xyz.block:web5-credentials:0.0.9-delta")
+    implementation("xyz.block:web5-dids:0.0.9-delta")
+    implementation("com.github.TBD54566975:tbdex-kt:0.7.2-beta")
+  }
+  ```
+  
+  </TabItem>
+</Tabs>
 
 ## Import Classes
 
 To send and receive tbDEX messages, import the following classes:
 
-```js
-import { TbdexHttpClient, Rfq, Quote, Order} from '@tbdex/http-client';
-import { VerifiableCredential, PresentationExchange } from "@web5/credentials";
-```
+<Tabs groupId="language">
+  <TabItem groupId="language" value="JavaScript" label="JavaScript" default>
+
+  ```js
+  import { 
+      TbdexHttpClient,
+      Rfq,
+      Quote,
+      Order
+  } from '@tbdex/http-client';
+
+  import {
+    VerifiableCredential, 
+    PresentationExchange
+  } from "@web5/credentials";
+  ```
+
+  </TabItem>
+  <TabItem groupId="language" value="Kotlin" label="Kotlin" default>
+
+  ```kt
+  import tbdex.sdk.httpclient.TbdexHttpClient
+  import tbdex.sdk.protocol.models.Rfq
+  import tbdex.sdk.protocol.models.Quote
+  import tbdex.sdk.protocol.models.Order
+  import web5.sdk.credentials.VerifiableCredential
+  import web5.sdk.credentials.PresentationExchange
+  ```
+
+  </TabItem>
+</Tabs>
