--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -80,22 +80,22 @@ test('createDidDht creates a DID with did:dht method', async () => {
 
 4. In the generated folder you'll find the generated file named as `functionName.snippet.js` (or the respective file extension). For example, the above snippet will be `createDidDht.snippet.js`.
 
-To use the snippet in your documentation(`.mdx` file), you're going to use the `Shnip` component in the following format:
+To use the snippet in your documentation(`.mdx` file), you're going to use the `Shnip` component, and import the code snippet from `!!raw-loader!` in the following format:
 
-```mdx
-// if it's a multi language doc, you'll need to specify it like this at the top of the file;
-
-<LanguageSwitcher languages="JavaScript, Kotlin" />
+```js
+import createDidDht from '!!raw-loader!@site/snippets/web5/build/decentralized-identifiers/createDidDht.snippet.js';
+// if it's a multi language doc, you'll need to specify it with the LanguageSwitcher component
+<LanguageSwitcher languages="JavaScript, Kotlin" />;
 
 <Shnip
   snippets={[{ name: 'createDidDht', language: 'JavaScript' }]}
   snippets={[{ name: 'kt_createDidDht', language: 'Kotlin' }]} // if you have another generated snippet in a different language
-/>
+/>;
 ```
 
 This is how you can add a generated code snippet and an inline hardcoded snippet into the doc:
 
-```mdx
+```js
 <Shnip
   snippets={[{ name: 'assignVcJwt', language: 'JavaScript' }]}
   inlineSnippets={[
